--- a/client/css/Assignments.css
+++ b/client/css/Assignments.css
@@ -2,6 +2,7 @@
 .assignments-wrapper {
   background-color: #f0f7f2;
   min-height: 100vh;
+  padding-top: 80px;
   padding-bottom: 3rem;
   font-family: 'Inter', sans-serif;
 }
